--- a/templates/petacc.html
+++ b/templates/petacc.html
@@ -128,8 +128,12 @@
         </section>
 
         <footer class="footer">
-            <img src="../img/google.svg" alt="G" class="google-icon">
-            <div class="copyright">©Pawly 2025</div>
+            <div class="footer-content">
+                <div class="footer-left">
+                    <img src="../img/google.svg" alt="G" class="google-icon">
+                </div>
+                <div class="copyright">©Pawly 2025</div>
+            </div>
         </footer>
     </div>
 </body>
