--- a/templates/profilep.html
+++ b/templates/profilep.html
@@ -75,7 +75,7 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="Google" class="google-icon">
+                    <img src="../img/google.svg" alt="G" class="google-icon">
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
