--- a/styles/style-req.css
+++ b/styles/style-req.css
@@ -83,6 +83,11 @@ h1 {
     box-shadow: 0 8px 25px rgba(0,0,0,0.1);
 }
 
+.pack-grid:active {
+    transform: translateY(-3px);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+}
+
 .pack-item {
     width: 100%;
     aspect-ratio: 1 / 1;
