--- a/styles/style.css
+++ b/styles/style.css
@@ -68,17 +68,26 @@ header {
     display: flex;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
 }
 
 .login-link {
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: #000;
     font-size: 16px;
 }
 
+.login-container:hover .login-link {
+    text-decoration: underline;
+}
+
 .login-icon {
-    height: 20px;
+    padding-left: 10px;
+    height: 16px;
     width: auto;
+    vertical-align: middle;
 }
 
 .main-content {
