--- a/templates/profilep.html
+++ b/templates/profilep.html
@@ -16,11 +16,10 @@
             </div>
             <nav class="top-nav">
                 <span class="nav-text">Пользователь</span>
-                <span class="nav-item active">Профиль</span>
             </nav>
         </header>
 
-        <a href="mainp.html" class="back-link">
+        <a href="main.html" class="back-link">
             <img src="../img/arrow-left.svg" alt="Назад" class="back-arrow-icon">
             <span>Назад</span>
         </a>
@@ -50,7 +49,9 @@
         <section class="blue-card pets-section">
             <div class="pet-slot add-slot">
                 <div class="add-box">
-                    <img src="../img/plus.svg" alt="Добавить" class="add">
+                    <a href="petreg.html">
+                        <img src="../img/plus.svg" alt="Добавить" class="add">
+                    </a>
                 </div>
                 <button class="btn-white-pill">Добавить питомца</button>
             </div>
@@ -58,14 +59,18 @@
             <div class="pet-slot">
                 <div class="pet-card">
                     <img src="../img/cat-5.png" alt="Барсик" class="pet-img">
-                    <div class="pet-overlay">Рыжик</div>
+                    <a href="petacc.html">
+                        <div class="pet-overlay">Рыжик</div>
+                    </a>
                 </div>
             </div>
 
             <div class="pet-slot">
                 <div class="pet-card">
                     <img src="../img/hamster.png" alt="Хомячок Люся" class="pet-img">
-                    <div class="pet-overlay">Люся</div>
+                    <a href="petacc.html">
+                        <div class="pet-overlay">Люся</div>
+                    </a>
                 </div>
             </div>
 
@@ -75,7 +80,9 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="G" class="google-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
