--- a/templates/blog.html
+++ b/templates/blog.html
@@ -15,8 +15,7 @@
                     <img src="../img/logo.svg" alt="Pawly" class="logo-img">
                 </div>
                 <nav class="top-nav">
-                    <p>Статьи</p>
-                    <a href="#">Профиль</a>
+                    <span>Статьи</span>
                 </nav>
             </div>
         </header>
@@ -99,8 +98,10 @@
         <footer class="container footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="Google" class="footer-icon">
-                </div>
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>                
+                    </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
         </footer>
