--- a/templates/exactbg.html
+++ b/templates/exactbg.html
@@ -15,8 +15,7 @@
                     <img src="../img/logo.svg" alt="Pawly" class="logo-img">
                 </div>
                 <nav class="top-nav">
-                    <p>Статья</p>
-                    <a href="#">Профиль</a>
+                    <span>Статья</span>
                 </nav>
             </div>
         </header>
@@ -65,7 +64,9 @@
         <footer class="container footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="Google" class="footer-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>                  
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
