--- a/templates/main.html
+++ b/templates/main.html
@@ -106,7 +106,9 @@
                 </div>
                 
                 <div class="footer-bottom-left">
-                    <img src="../img/google.svg" alt="G" class="google-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="footer-bottom-center">
                     <span class="copyright">©Pawly 2025</span>
