--- a/templates/petacc.html
+++ b/templates/petacc.html
@@ -15,11 +15,10 @@
             </div>
             <nav class="top-nav">
                 <span>Питомец</span>
-                <span>Профиль</span>
             </nav>
         </header>
 
-        <a href="#" class="back-link">
+        <a href="profilep.html" class="back-link">
             <img src="../img/arrow-left.svg" alt="Назад" class="arrow-icon">
             <span>Назад</span>
         </a>
@@ -80,7 +79,7 @@
                     <div class="day-num">4</div>
                     <div class="day-num">5</div>
                     <div class="day-num">6</div>
-                    <div class="day-num active-day">7</div>
+                    <div class="day-num">7</div>
                     <div class="day-num">8</div>
                     <div class="day-num">9</div>
                     <div class="day-num">10</div>
@@ -130,7 +129,9 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="G" class="google-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
