--- a/templates/petreg.html
+++ b/templates/petreg.html
@@ -42,9 +42,9 @@
                 </label>
             </div>
 
-            <div class="section-title">Выберите породу питомца</div>
+            <div class="section-title">Введите породу питомца</div>
             <div class="single-input-container">
-                <input type="text" class="input-field" placeholder="Породы">
+                <input type="text" class="input-field" placeholder="Порода">
             </div>
 
             <div class="section-title">Введите данные питомца</div>
@@ -54,6 +54,7 @@
                     <input type="text" class="input-field" placeholder="Имя">
                     <input type="text" class="input-field" placeholder="Кличка">
                     <input type="text" class="input-field" placeholder="Дата рождения">
+                    <input type="text" class="input-field" placeholder="Дата взятия питомца">
                 </div>
                 
                 <div class="right-column">
