--- a/styles/style-blog.css
+++ b/styles/style-blog.css
@@ -69,6 +69,7 @@ header {
     font-size: 18px;
     color: #000000;
     font-family: 'Philosopher', sans-serif; 
+    color: #8CC5EA;
 }
 
 .top-nav a {
@@ -77,6 +78,7 @@ header {
 }
 
 .back-link {
+    max-width: fit-content;
     font-family: 'Playfair Display', serif;
     font-size: 16px;
     margin-bottom: 30px;
@@ -91,6 +93,10 @@ header {
 .back-arrow-icon {
     height: 16px;
     width: auto;
+}
+
+.back-link:hover{
+    text-decoration: underline;
 }
 
 .controls-row {
@@ -119,6 +125,11 @@ header {
     height: 24px;
 }
 
+.btn-icon:hover {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
 .search-bar {
     flex-grow: 1;
     border-radius: 15px;
@@ -134,6 +145,11 @@ header {
     width: 24px;
     height: 24px;
     margin-right: 10px;
+}
+
+.search-icon:hover{
+    transform: scale(1.2);
+    transition: 0.5s;
 }
 
 .search-input {
@@ -228,6 +244,10 @@ header {
     font-size: 14px;
 }
 
+.read-more:hover{
+    text-decoration: underline;
+}
+
 .read-arrow {
     width: 12px;
     height: auto;
@@ -251,6 +271,11 @@ header {
     cursor: pointer;
     color: #000000;
     text-align: center;
+}
+
+.page-btn:first-child{
+    background-color: #AAD7F3;
+    color: #000;
 }
 
 .send-email-info {
