--- a/styles/style-profp.css
+++ b/styles/style-profp.css
@@ -53,10 +53,11 @@ body {
     gap: 200px;
     font-family: 'Playfair Display', serif;
     font-size: 18px;
-    color: #333;
+    color: #8CC5EA;
 }
 
 .back-link {
+    max-width: fit-content;
     display: flex;
     align-items: center;
     gap: 15px;
@@ -69,8 +70,12 @@ body {
 }
 
 .arrow-icon {
-    height: 24px;
+    height: 16px;
     width: auto;
+}
+
+.back-link:hover{
+    text-decoration: underline;
 }
 
 .blue-card {
@@ -148,11 +153,26 @@ body {
 .btn-blue {
     background-color: #9CCCE8;
     color: #fff;
+    transition: 0.5s;
+}
+
+.btn-blue:hover{
+    background-color: #74b1d7;
+    transform: scale(0.98);
+    transition: 0.5s;
 }
 
 .btn-black {
+    transition: 0.5s;
     background-color: #000;
     color: #fff;
+}
+
+.btn-black:hover {
+    transform: scale(0.98);
+    background-color: #ffffff;
+    color: #000000;
+    transition: 0.5s;
 }
 
 .gallery-grid {
@@ -179,6 +199,15 @@ body {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+
+.add-item-box:hover {
+    border: 2px solid rgba(143, 197, 232, 0.7);
+
+    .add {
+        transform: scale(1.2);
+        transition: 0.5s;
+    }
 }
 
 .plus-sign {
@@ -233,7 +262,6 @@ body {
 
 .day-name {
     font-family: 'Philosopher', sans-serif;
-    font-weight: bold;
     margin-bottom: 10px;
     font-size: 18px;
 }
@@ -245,20 +273,14 @@ body {
     cursor: pointer;
 }
 
+.day-num:hover {
+    text-decoration: underline;
+    color: #74b1d7;
+}
+
 .active-day {
     position: relative;
     color: #000;
-}
-
-.active-day::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 2px;
-    background-color: #8FC5E8;
 }
 
 .notes-wrapper {
@@ -275,6 +297,15 @@ body {
     display: flex;
     align-items: center;
     gap: 15px;
+}
+
+.add-note-box:hover {
+    border: 2px solid rgba(143, 197, 232, 0.7);
+
+    .add {
+        transform: scale(1.2);
+        transition: 0.5s;
+    }
 }
 
 .note-line {
