--- a/templates/mainp.html
+++ b/templates/mainp.html
@@ -104,7 +104,9 @@
                 </div>
                 
                 <div class="footer-bottom-left">
-                    <img src="../img/google.svg" alt="Google" class="google-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="footer-bottom-center">
                     <span class="copyright">©Pawly 2025</span>
