--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,7 +16,6 @@
             </div>
             <nav class="top-nav">
                 <span class="nav-text">Пользователь</span>
-                <span class="nav-item active">Профиль</span>
             </nav>
         </header>
 
@@ -62,7 +61,9 @@
         <footer class="footer">
             <div class="footer-content">
                 <div class="footer-left">
-                    <img src="../img/google.svg" alt="G" class="google-icon">
+                    <a href="#">
+                        <img src="../img/google.svg" alt="G">
+                    </a>
                 </div>
                 <div class="copyright">©Pawly 2025</div>
             </div>
