needs to be checked

--- a/styles/style-req.css
+++ b/styles/style-req.css
@@ -78,6 +78,7 @@ h1 {
 }
 
 .pack-grid:hover{
+    transition: 0.5s;
     transform: translateY(-3px);
     box-shadow: 0 8px 25px rgba(0,0,0,0.1);
 }
