--- a/styles/style-blog.css
+++ b/styles/style-blog.css
@@ -415,13 +415,17 @@ header {
     .footer {
         justify-content: space-between;
         position: static;
+    }
+
+    .footer-content {
         flex-direction: row;
         gap: 10px;
     }
-    
-    .footer-icon {
+
+    .footer-left {
         position: static;
         transform: none;
+        order: 1;
     }
 
     .copyright {
