--- a/styles/style-mainp.css
+++ b/styles/style-mainp.css
@@ -532,29 +532,11 @@ header {
     }
 
     .footer-grid {
-        display: grid;
-        grid-template-columns: 1fr auto 1fr;
+        display: flex;
+        flex-direction: column;
         align-items: center;
         gap: 20px;
-        width: 100%;
-        padding: 0 20px;
-        box-sizing: border-box;
-    }
-
-    .footer-content {
-        grid-column: 1 / -1;
-        width: 100%;
-    }
-
-    .footer-text {
-        font-size: 16px;
-        line-height: 1.5;
-        padding: 0 10px;
-        margin-bottom: 30px;
-    }
-
-    .footer h2 {
-        font-size: 32px;
+        text-align: center;
     }
 
     .cat-area,
@@ -562,30 +544,38 @@ header {
         display: none;
     }
 
-    .footer-bottom-left {
-        grid-column: 1;
-        justify-self: start;
-        margin: 0;
+    .footer-content {
+        width: 100%;
+    }
+
+    .footer h2 {
+        font-size: 36px;
+    }
+
+    .subtitle {
+        font-size: 18px;
+    }
+
+    .footer-text {
+        font-size: 16px;
+        margin-bottom: 40px;
+        padding: 0 10px;
+    }
+
+    .footer-bottom-left,
+    .footer-bottom-center,
+    .footer-bottom-right {
+        width: 100%;
         display: flex;
-    }
-
-    .google-icon {
-        width: 24px;
-        height: auto;
-    }
-
-    .footer-bottom-center {
-        grid-column: 2;
-        justify-self: center;
-        margin: 0;
-        white-space: nowrap;
+        justify-content: center;
+        align-items: center;
+        grid-column: auto;
+        align-self: auto;
+        text-align: center;
     }
 
     .footer-bottom-right {
-        grid-column: 3;
-        justify-self: end;
-        margin: 0;
-        display: flex;
+        margin-bottom: 20px;
     }
 }
 
@@ -739,7 +729,7 @@ header {
         display: flex;
     }
 
-    .google-con {
+    .google-icon {
         width: 24px;
         height: auto;
     }
