--- a/templates/blog.html
+++ b/templates/blog.html
@@ -90,7 +90,7 @@
 
         <div class="send-email-info">
             <div class="cat-container">
-                <img src="../img/lying cat.png" alt="Cat" class="cat-img">
+                <img src="../img/lying-cat.png" alt="Cat" class="cat-img">
             </div>
             <p class="info-text">Для отправки своей статьи, напишите нам на почту.</p>
         </div>
