--- a/templates/main.html
+++ b/templates/main.html
@@ -90,7 +90,7 @@
         <footer class="footer">
             <div class="grid-wrapper footer-grid">
                 <div class="cat-area">
-                    <img src="../img/lying cat.png" alt="Black Cat" class="cat-decoration">
+                    <img src="../img/lying-cat.png" alt="Black Cat" class="cat-decoration">
                 </div>
                 <div class="footer-content">
                     <h2>Спасибо вам</h2>
