--- a/templates/petacc.html
+++ b/templates/petacc.html
@@ -42,7 +42,7 @@
             </div>
         </section>
 
-        <h2 class="section-title">Последние фото</h2>
+        <h2 class="section-title">Вещи питомца</h2>
         <section class="blue-card gallery-grid">
             <img src="../img/active-cat-1.png" alt="Фото 1" class="item-photo img-with-border">
             <img src="../img/active-cat-2.png" alt="Фото 2" class="item-photo img-with-border">
