--- a/templates/petreg.html
+++ b/templates/petreg.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <a href="recomendations.html" class="btn-submit">Продолжить</a>
+            <a href="recomemndations.html" class="btn-submit">Продолжить</a>
 
         </div>
 
