--- a/styles/style-wop.css
+++ b/styles/style-wop.css
@@ -238,13 +238,14 @@ body {
 
     .add {
         transform: scale(1.2);
+        transition: 0.5s;
     }
 }
 
 .btn-white-pill {
     background-color: #FFFFFF;
     border: none;
-    border-radius: 20px;
+    border-radius: 15px;
     padding: 10px 15px;
     font-family: 'Playfair Display', serif;
     font-size: 14px;
